Minor improvement to wrap text vertically

--- a/SimpleAWSBedrockApp/Views/Home/Index.cshtml
+++ b/SimpleAWSBedrockApp/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                     </div>
 
                     <!-- Result container -->
-                    <pre id="result-output" class="bg-light p-3 rounded" style="min-height: 233px;">
+                    <pre id="result-output" class="bg-light p-3 rounded" style="min-height: 233px; white-space: pre-wrap; word-wrap: break-word;">
                         <!-- Result will be displayed here -->
                     </pre>
                 </div>
